navigationa and home page

--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,7 @@ body {
     )
     rgb(var(--background-start-rgb));
 } */
+
+.clip-path-trapezoid {
+  clip-path: polygon(0% 10%, 100% 0%, 100% 90%, 0% 100%);
+}
